@@ -39,7 +39,12 @@ GIBLIB_CFLAGS=`giblib-config --cflags`
 AC_SUBST(GIBLIB_LIBS)
 AC_SUBST(GIBLIB_CFLAGS)
 
-LIBS="$LIBS -lm"
+dnl Check for Xinerama
+LIBS="-L/usr/X11R6/lib $LIBS -lm"
+AC_CHECK_LIB(Xext,XMissingExtension)
+AC_CHECK_LIB(Xinerama,XineramaQueryScreens)
+AC_SUBST(HAVE_XINERAMA)
+AC_SUBST(XINERAMA_LIBS)
 
 AC_CHECK_FUNC(getopt_long,,[LIBOBJS="$LIBOBJS getopt.o getopt1.o"])
 AC_SUBST(LIBOBJS)
